# startup-game

./: .gitignore  Anchor.toml  README.md
frontend/: .env.sample  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.json  idl.json  index.tsx  rooms.ts  styles.css
frontend/src/components/: Balances.tsx  ClaimLootboxModal.css  ClaimLootboxModal.tsx  GameScreen.tsx  GuideScreen.css  GuideScreen.tsx  HeistsModal.css  HeistsModal.tsx  HomeScreen.css  HomeScreen.tsx  HowToModal.tsx  InventoryScreen.css  InventoryScreen.tsx  LeaderboardScreen.css  LeaderboardScreen.tsx  MissionsModal.css  MissionsModal.tsx  Navbar.tsx  PurchaseModal.tsx  Room.tsx  RoomDetailsModal.css  RoomDetailsModal.tsx  SiteNavigation.css  SiteNavigation.tsx  TeamModal.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useProgram.tsx
programs/startup-game/: Cargo.toml
programs/startup-game/src/: errors.rs  lib.rs
tests/: startup-game.ts
