[package]
name = "startup-game"
version = "0.1.0"
description = "FOC business simulation game."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "startup_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
